Changed archive branch to close branch, Added re-open branch, Added branch context menu filtering

--- a/editor/sass/editor.scss
+++ b/editor/sass/editor.scss
@@ -8664,7 +8664,7 @@ strong {
                             }
                         }
 
-                        &.archive-branch {
+                        &.close-branch {
                             .ui-panel.main {
                                 > .content {
                                     flex-direction: column;
