Fix typo in css

--- a/editor/sass/editor.scss
+++ b/editor/sass/editor.scss
@@ -148,7 +148,7 @@ strong {
                 background-color: $bcg-darker;
             }
 
-            &.pditor-settings {
+            &.editor-settings {
                 position: absolute;
                 left: 0;
                 bottom: 0;
