UI fixes for the version control picker

--- a/editor/sass/editor.scss
+++ b/editor/sass/editor.scss
@@ -8900,6 +8900,8 @@ strong {
             }
 
             .checkpoints {
+                height: 522px; // for some reason percentages don't work
+
                 .ui-list {
                     > .ui-list-item {
                         height: auto;
