--- a/editor/sass/editor.scss
+++ b/editor/sass/editor.scss
@@ -7670,7 +7670,7 @@ strong {
                 > .ui-button {
                     margin: 0;
                     padding: 0;
-                    width: 210px;
+                    width: 100%;
                     height: 34px;
                     line-height: 34px;
                     font-size: 12px;
@@ -7678,14 +7678,6 @@ strong {
                     text-align: center;
                     @extend .font-bold;
                     @extend .font-smooth;
-
-                    &:before {
-                        @extend .font-icon;
-                        font-size: 14px;
-                        color: $text-secondary;
-                        vertical-align: top;
-                        padding-right: 10px;
-                    }
                 }
 
                 &:hover {
@@ -7702,24 +7694,6 @@ strong {
                                 color: $text-active;
                             }
                         }
-                    }
-                }
-
-                .ui-button.download {
-                    &:before {
-                        content: '\E245';
-                    }
-                }
-
-                .ui-button.publish {
-                    &:before {
-                        content: '\E268';
-                    }
-                }
-
-                .ui-button.publish-fb {
-                    &:before {
-                        content: '\E255';
                     }
                 }
             }
